--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "ngx-mask": "^9.1.2",
     "rxjs": "~6.5.5",
+    "telefone-mask-ng2": "^1.0.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
