--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "node_modules/jquery/dist/jquery.js"
+              "node_modules/jquery/dist/jquery.js",
+              "src/js/jss.js"
             ]
           },
           "configurations": {
